--- a/SouSouTest/JYVivoApp/JYVivo.storyboard
+++ b/SouSouTest/JYVivoApp/JYVivo.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -169,11 +168,8 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleAspectFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cMk-mb-4I9" customClass="UIVivoVideoView">
-                                <rect key="frame" x="40" y="164" width="240" height="308"/>
+                                <rect key="frame" x="16" y="124" width="343" height="440"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="cMk-mb-4I9" secondAttribute="height" multiplier="60:77" id="S4Y-cV-Gcw"/>
-                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uQC-wH-iZ7" customClass="UIStepView">
                                 <rect key="frame" x="0.0" y="80" width="320" height="488"/>
@@ -195,13 +191,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cMk-mb-4I9" firstAttribute="top" secondItem="f9W-W2-OZS" secondAttribute="bottom" constant="40" id="1qc-NG-vDG"/>
                             <constraint firstItem="cMk-mb-4I9" firstAttribute="centerY" secondItem="nbo-B2-FGg" secondAttribute="centerY" constant="30" id="6yj-76-lPq"/>
                             <constraint firstItem="uQC-wH-iZ7" firstAttribute="top" secondItem="OYP-uS-z3C" secondAttribute="bottom" id="9FL-gk-QTG"/>
                             <constraint firstItem="I0j-11-CgP" firstAttribute="top" secondItem="nbo-B2-FGg" secondAttribute="top" id="CUU-mn-ymx"/>
                             <constraint firstItem="I0j-11-CgP" firstAttribute="leading" secondItem="nbo-B2-FGg" secondAttribute="leading" id="FPZ-33-RKN"/>
+                            <constraint firstAttribute="bottom" secondItem="cMk-mb-4I9" secondAttribute="bottom" id="FTV-4E-1Sx"/>
                             <constraint firstItem="f9W-W2-OZS" firstAttribute="centerX" secondItem="nbo-B2-FGg" secondAttribute="centerX" id="FTs-8b-kMo"/>
-                            <constraint firstItem="cMk-mb-4I9" firstAttribute="leading" secondItem="nbo-B2-FGg" secondAttribute="leadingMargin" constant="50" id="HE8-vv-0VC"/>
                             <constraint firstAttribute="trailing" secondItem="uQC-wH-iZ7" secondAttribute="trailing" id="JS7-CZ-Ecq"/>
                             <constraint firstItem="f9W-W2-OZS" firstAttribute="top" secondItem="j6M-fQ-eUp" secondAttribute="bottom" constant="20" id="MRv-vS-z8e"/>
                             <constraint firstAttribute="trailing" secondItem="I0j-11-CgP" secondAttribute="trailing" id="Pb0-iU-aeG"/>
@@ -211,10 +206,12 @@
                             <constraint firstItem="cMk-mb-4I9" firstAttribute="centerX" secondItem="nbo-B2-FGg" secondAttribute="centerX" id="XHb-Cf-SAK"/>
                             <constraint firstItem="uQC-wH-iZ7" firstAttribute="leading" secondItem="nbo-B2-FGg" secondAttribute="leading" id="Xu0-P2-vad"/>
                             <constraint firstItem="mnl-lG-Tet" firstAttribute="top" secondItem="uQC-wH-iZ7" secondAttribute="bottom" id="aj0-33-FQP"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cMk-mb-4I9" secondAttribute="trailing" constant="50" id="iF9-CR-7Cu"/>
                             <constraint firstItem="uQC-wH-iZ7" firstAttribute="top" secondItem="f9W-W2-OZS" secondAttribute="bottom" id="mJc-bK-XT9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="j6M-fQ-eUp" secondAttribute="trailing" constant="-20" id="omZ-jj-l91"/>
                             <constraint firstItem="j6M-fQ-eUp" firstAttribute="top" secondItem="iM5-ee-zCn" secondAttribute="bottom" id="sjE-Ft-zyA"/>
+                            <constraint firstItem="cMk-mb-4I9" firstAttribute="leading" secondItem="nbo-B2-FGg" secondAttribute="leading" id="uRF-q2-fL8"/>
+                            <constraint firstAttribute="trailing" secondItem="cMk-mb-4I9" secondAttribute="trailing" id="zVI-Ed-Nb6"/>
+                            <constraint firstItem="cMk-mb-4I9" firstAttribute="top" secondItem="j6M-fQ-eUp" secondAttribute="bottom" id="zXM-Yh-d4H"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
