--- a/SouSouTest/JYVivoApp/JYVivo.storyboard
+++ b/SouSouTest/JYVivoApp/JYVivo.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9eV-Wj-RLi">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9eV-Wj-RLi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,8 +36,8 @@
                                     <action selector="start:" destination="9eV-Wj-RLi" eventType="touchUpInside" id="ZlW-lh-bxL"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4F-B8-wmM">
-                                <rect key="frame" x="28" y="528" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4F-B8-wmM">
+                                <rect key="frame" x="16" y="617" width="30" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.2331749213" blue="0.25126619700000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="8Zh-pl-Ytw"/>
@@ -82,7 +82,7 @@
                     <color key="backgroundColor" red="0.76078431369999999" green="0.82352941180000006" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="-1441" y="-30"/>
+            <point key="canvasLocation" x="-1654" y="-52"/>
         </scene>
         <!--Id Card View Controller-->
         <scene sceneID="waE-3U-t00">
@@ -104,12 +104,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2So-qg-KRi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-711" y="-30"/>
+            <point key="canvasLocation" x="-726" y="-51"/>
         </scene>
         <!--Id Card Result View Controller-->
         <scene sceneID="ivP-E9-dBS">
             <objects>
-                <viewController id="gG9-6e-l7K" customClass="idCardResultViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="result" id="gG9-6e-l7K" customClass="idCardResultViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UEy-1R-SbT"/>
                         <viewControllerLayoutGuide type="bottom" id="KBq-Fl-OYJ"/>
