--- a/SouSouTest/Base.lproj/Main.storyboard
+++ b/SouSouTest/Base.lproj/Main.storyboard
@@ -32,9 +32,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.33757842259999998" green="1" blue="0.43632413149999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" title="人脸识别" id="lw9-Ze-gxQ">
-                        <barButtonItem key="backBarButtonItem" title="返回" id="tNg-Fk-RHu"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="人脸识别" id="lw9-Ze-gxQ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
