--- a/SouSouTest/JYVivoApp/JYVivo.storyboard
+++ b/SouSouTest/JYVivoApp/JYVivo.storyboard
@@ -160,7 +160,7 @@
                                     <constraint firstAttribute="height" constant="44" id="6mK-rL-4wc"/>
                                     <constraint firstAttribute="width" constant="44" id="PXu-6Q-4RB"/>
                                 </constraints>
-                                <state key="normal" image="BackWhite.png"/>
+                                <state key="normal" image="back"/>
                                 <connections>
                                     <action selector="onBack:" destination="bPJ-X3-Yn3" eventType="touchUpInside" id="HAh-oM-llH"/>
                                 </connections>
@@ -627,6 +627,7 @@
         <image name="BackBlack.png" width="13" height="20"/>
         <image name="BackWhite.png" width="13" height="20"/>
         <image name="CloseKeyboard.png" width="40" height="40"/>
+        <image name="back" width="10" height="18"/>
         <image name="btn_setting_n.png" width="79" height="79"/>
         <image name="result_bg.png" width="16" height="16"/>
         <image name="result_txt_bg.png" width="119" height="122"/>
